--- a/dissertation_main.tex
+++ b/dissertation_main.tex
@@ -19,9 +19,9 @@
 \input{./tex/title}
 \pagenumbering{arabic}
 % TODO insert black page between title and abstract
-\input{./tex/abstract}§
+\input{./tex/abstract}
 %\maketitle
-\setcounter{tocdepth}{1}
+\setcounter{tocdepth}{2}
 \tableofcontents
 \pagebreak
 % \listoffigures
