--- a/tex/main.tex
+++ b/tex/main.tex
@@ -3,5 +3,4 @@
 % \input{./tex/main/storytelling.tex}
 \input{./tex/main/weporter.tex}
 \input{./tex/main/evaluation.tex}
-% \input{./tex/main/discussion.tex}
-\input{./tex/main/future}
+\input{./tex/main/discussion.tex}
