--- a/tex/main/weporter.tex
+++ b/tex/main/weporter.tex
@@ -1,5 +1,5 @@
 \chapter{Human Computed Stories in wePorter}
-\label{chap:weporter}
+\label{ch:weporter}
 
 
 
@@ -30,9 +30,11 @@
 
 \section{Introduction}
 
+% [TODO]
+
 % The first part of definition of Human Computation included in chapter \ref{ch:human_computation} introduces an interesting question whether storytelling is a computable process.
 
-This section describes the interaction design of the wePorter system, built to exemplify how the paradigm of human computation can be used in tasks like filtering of video segments and semi-automated video reconfiguration. The wePorter system runs an interactive webpage that functions as the main source for data acquisition, presentation of results and general proof of concept. In this chapter the system is analysed along the axes of \textit{Purpose}, \textit{Motivation} and \textit{Task}, that were introduced in the analysis of Human Computational systems in chapter \ref{ch:humancomputation}. Next to these guidelines for analysis, some remarks are made about the specifics in the functioning of the system. Lastly we discuss the implementation of the web application that is central in wePorter.
+This section describes the interaction design of the wePorter system, built to exemplify how the paradigm of human computation can be used in tasks like filtering of video segments and semi-automated video reconfiguration. The wePorter system runs an interactive webpage that functions as the main source for data acquisition, presentation of results and general proof of concept. In this chapter the system is analysed along the axes of \textit{purpose}, \textit{motivation} and \textit{task}, that were introduced in the analysis of Human Computational systems in chapter \ref{ch:human_computation}. Next to these guidelines for analysis, some remarks are made about the specifics in the functioning of the system. Lastly we discuss the implementation of the web application that is central in wePorter.
 
 \section{User Generated Video Content}
 \label{sec:weporter_ugvc}
