--- a/tex/main/discussion.tex
+++ b/tex/main/discussion.tex
@@ -1,4 +1,18 @@
-\chapter{Discussion}
+\chapter{Discussion and Future Directions}
 \label{ch:discussion}
 
  
+
+This is the Future Directions chapter. We discuss possible extensions in terms of both system capabilities and ideas for future research.
+
+Creations thus constructed will embody an interesting aspect of collective creation through the merging of content creators, people contributing their human computational capacity and algorithmic aggregation of these components. It will be interesting to see how these developments take form and how they might shape future ideas of authorship.
+
+
+% higher resolution of interest elicitation
+In its current version the system uses aggregate counts for the time a user focussed on a particular sub-clips. Since the interactive player is set up to capture users' focus every 100 milliseconds, this could also become the resolution of recording. That way each video parts would have $length/\delta$ time bins in a interest histogram.
+
+% more videos in parallel!!!
+
+% discussion
+
+``In particular, the results indicate that users may differ substantially from one another with respect to display time behavior, and that any single user’s display time behavior may differ substantially according to the task leading to the information-seeking behavior.''\cite{Kelly:2004tq}
